# happy

./: .appveyor.yml  .current-hash  .gitignore  .readthedocs.yaml  .travis.yml  ANNOUNCE  AbsSyn.lhs  CHANGES  ChangeLog.md  DEVELOPER.md  First.lhs  GenUtils.lhs  GetOpt.lhs  Grammar.lhs  Info.lhs  LALR.lhs  LICENSE  Lexer.lhs  Main.lhs  Makefile  Makefile.BOOT  Makefile.original  OurIO.lhs  Parser.hs  Parser.ly  ProduceCode.lhs  README  README.md  Set.lhs  Setup.hs  Setup.lhs  TODO  Target.lhs  Test.hs-CMP  Test.ly  Version.lhs  appveyor.yml  bootstrap.hs  build-windows-dist.sh  cabal.haskell-ci  (+11 more)
.github/: haskell-ci.patch
.github/workflows/: bootstrap.yml  haskell-ci.yml  make-sdist.yml
InstallShield/: Happy.ipr
InstallShield/Component Definitions/: Default.cdf  Default.fgl
InstallShield/File Groups/: Default.fdf  Help Files.fgl  Program Executable Files.fgl
InstallShield/Script Files/: Setup.Inx  Setup.Obs  Setup.dbg  Setup.ino  Setup.ins  Setup.map  setup.rul
InstallShield/String Tables/: Default.shl
alex/: Makefile  README
alex/doc/: alex.sgml
alex/examples/: haskell.x
alex/mk/: boilerplate.mk  target.mk  version.mk
alex/src/: AbsSyn.hs  Alex.hs  CharSet.hs  DFA.hs  Info.hs  Main.hs  Makefile  NFA.hs  Output.hs  Parser.y  RExp.hs  Scan.hs  Scan.x  Util.hs
alex/templates/: GenericTemplate.hs  Makefile
alex/tests/: Makefile  simple.x
app/: Main.lhs
data/: GLR_Lib.hs  HappyTemplate.hs
doc/: Makefile  attribute-grammars.rst  conf.py  configure.ac  contributing.rst  glr.rst  happy-bugs.html  happy.1.in  happy.dvi  happy.info  happy.ps  happy.sgml  happy.texinfo  happy.xml  index.rst  info-files.rst  introduction.rst  invoking.rst  obtaining.rst  syntax.rst  tips.rst  using.rst
doc-1.11/html/: happy-introduction.html  happy.html  sec-compilation-time.html  sec-conflict-tips.html  sec-directives.html  sec-error.html  sec-finding-errors.html  sec-grammar-files.html  sec-grammar.html  sec-info-files.html  sec-invoking.html  sec-license.html  sec-module-header.html  sec-module-trailer.html  sec-monads.html  sec-multiple-parsers.html  sec-obtaining.html  sec-precedences.html  sec-reporting-bugs.html  sec-sequences.html  sec-tips.html  sec-type-signatures.html  sec-using.html
doc-1.11/ps/: happy.ps
doc-1.8/html/: happy-introduction.html  happy.html  sec-ambiguities.html  sec-compilation-time.html  sec-conflict-tips.html  sec-directives.html  sec-error.html  sec-finding-errors.html  sec-grammar-files.html  sec-grammar.html  sec-info-files.html  sec-invoking.html  sec-license.html  sec-module-header.html  sec-module-trailer.html  sec-monads.html  sec-obtaining.html  sec-precedences.html  sec-reporting-bugs.html  sec-sequences.html  sec-tips.html  sec-type-signatures.html  sec-using.html
doc-1.8/ps/: happy.ps
doc/html-OLD/: happy-introduction.html  index.html  ix01.html  sec-AtrributeGrammarsInHappy.html  sec-AttrGrammarLimits.html  sec-AttributeGrammarExample.html  sec-Precedences.html  sec-compilation-time.html  sec-conflict-tips.html  sec-directives.html  sec-error.html  sec-finding-errors.html  sec-glr-using.html  sec-grammar-files.html  sec-grammar.html  sec-happy-ghci.html  sec-info-files.html  sec-invoking.html  sec-license.html  sec-module-header.html  sec-module-trailer.html  sec-monads.html  sec-multiple-parsers.html  sec-obtaining.html  sec-reporting-bugs.html  sec-sequences.html  (+3 more)
doc_OLD/: happy-1.html  happy-2.html  happy-3.html  happy-4.html  happy-5.html  happy-6.html  happy.dvi  happy.html  happy.ps
docbook/: .gitignore  README.md  happy.1.in  happy.xml
examples/: AndysExample.ly  Calc.ly  DavesExample.ly  ErlParser.ly  ErrorTest.ly  LexerTest.ly  MonadTest.ly  PgnParser.ly  README  SimonsExample.ly  bug1.y  bug2.ly  monadtest.ly  monadtest2.ly
gen-happy-sdist/: Main.hs  gen-happy-sdist.cabal
lib/: hackage-upload.sh  happy-lib.cabal
lib/backend-glr/src/Happy/Backend/: GLR.hs
lib/backend-glr/src/Happy/Backend/GLR/: ProduceCode.lhs
lib/backend-lalr/src/Happy/Backend/: LALR.hs
lib/backend-lalr/src/Happy/Backend/LALR/: ProduceCode.lhs
lib/data/: HappyTemplate.hs
lib/frontend/boot-src/: Parser.ly
lib/frontend/src/Happy/Frontend/: AbsSyn.lhs  AttrGrammar.lhs  Lexer.lhs  Mangler.lhs  ParamRules.hs  Parser.hs  PrettyGrammar.hs
lib/frontend/src/Happy/Frontend/AttrGrammar/: Mangler.lhs  Parser.hs
lib/grammar/src/Happy/: Grammar.lhs
lib/grammar/src/Happy/Grammar/: ExpressionWithHole.hs
lib/tabular/src/Happy/: Tabular.lhs
lib/tabular/src/Happy/Tabular/: First.lhs  Info.lhs  LALR.lhs  NameSet.hs
mk/: boilerplate.mk  config.mk  target.mk  version.mk
mkworld/: install-happy.ljm  macros-happy.ljm  only4-happy.ljm  suffixes-happy.ljm  utils-happy.ljm
src/: AbsSyn.lhs  AttrGrammar.lhs  AttrGrammarParser.hs  AttrGrammarParser.ly  EBNF_Rules.hs  First.lhs  Follow.hs  GenUtils.lhs  GetOpt.lhs  Grammar.lhs  Info.lhs  IntSet.lhs  LALR.lhs  Lexer.lhs  Main.hs  Main.lhs  Makefile  Mangler.lhs  NameSet.hs  OptionParsing.hs  ParamRules.hs  ParseMonad.hs  ParseMonad.lhs  Parser.hs  Parser.ly  PrettyGrammar.hs  ProduceCode.lhs  ProduceGLRCode.lhs  RADCodeGen.hs  RADCodeGen_LALR.hs  RADStateGen.hs  RADTools.hs  Set.hs  Set.lhs  Tabular.lhs  Target.lhs  Test.hs  Test.hs-CMP  Test.hs-CMP-a  Test.hs-CMP-g  (+6 more)
templates/: GLR_Base.hs  GLR_Base.lhs  GLR_Lib.hs  GLR_Lib.lhs  GenericTemplate.hs  HappyTemplate  HappyTemplate-1_2  HappyTemplate-arrays  HappyTemplate-arrays-1_2  HappyTemplate-coerce  HappyTemplate-ghc  HappyTemplate-ghc-1_2  Makefile
tests/: .gitignore  AttrGrammar001.y  AttrGrammar002.y  Makefile  Partial.ly  Pragma.y  Test.ly  TestMulti.ly  TestPrecedence.ly  bogus-token.y  bug001.ly  bug002.y  bug003.y  bug004.y  catch-shift-reduce.y  ebnf.y  error001.y  expect_upper.y  issue131.y  issue265.y  issue335.stderr  issue335.y  issue352.y  issue91.y  issue93.y  issue94.y  issue95.y  monad001.y  monad002.ly  monaderror-explist.y  monaderror-lexer-explist.y  monaderror-resume.y  monaderror.y  precedence001.ly  precedence002.y  rank2.y  test_rules.y  typeclass_monad001.y  typeclass_monad002.ly  typeclass_monad_lexer.y
(+147 files in other folders)
